static filex fix and removed footer

--- a/templates/stone_detail.html
+++ b/templates/stone_detail.html
@@ -275,7 +275,7 @@
                 <div class="finder-comment">
 
                     <div class="comment-avatar">
-                        <img src="/media/stones/images/app_images/profile.png" alt="avatar">
+                        <img src="/app_images/profile.png" alt="avatar">
                     </div>
 
                     <div class="finder-comment-body">
@@ -307,7 +307,7 @@
                     {% for comment in comments %}
                         <div class="comment">
                             <div class="comment-avatar">
-                                <img src="/media/stones/images/app_images/profile.png" alt="avatar">
+                                <img src="/app_images/profile.png" alt="avatar">
                             </div>
                             <div class="comment-body">
                                 <div class="comment-author">
@@ -345,7 +345,5 @@
             }
         });
     </script>
-
-    {% include "partials/footer.html" %}
 </body>
 </html>
