--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -1,3 +1,4 @@
+{% load static %}
 <header class="site-header">
   <div class="header-content">
 
@@ -13,7 +14,7 @@
 
     <!-- Center Logo -->
     <a href="{% url 'home' %}" class="logo">
-      <img src="/media/stones/images/app_images/kamieniorze.png" alt="Kamieniorze" class="logo-img">
+      <img src="{% static 'app_images/kamieniorze.png' %}" alt="Kamieniorze" class="logo-img">
     </a>
 
     <!-- Right Links (Desktop) -->
@@ -97,7 +98,7 @@
   top: 0;
   z-index: 11000;
   padding: 8px 20px;
-  background-image: url("/media/stones/images/app_images/background.png");
+  background-image: url("/static/app_images/background.png");
   background-repeat: repeat;
   background-size: auto;
   background-position: top left;
@@ -137,7 +138,7 @@
   box-shadow: 2px 2px 5px rgba(60,35,25,1);
   text-shadow: 2px 2px 2px rgba(60,35,25,1);
   transition: transform 0.3s ease;
-  background-image: url("/media/stones/images/app_images/background.png");
+  background-image: url("/static/app_images/background.png");
   background-repeat: repeat; background-size: auto; background-position: top left;
   background-color: rgba(75,46,46,0.3); background-blend-mode: overlay;
 }
@@ -151,7 +152,7 @@ svg { filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.7)); }
 .mobile-menu {
   position: fixed; top: 0; left: -260px;
   width: 250px; height: 100vh;
-  background-image: url("/media/stones/images/app_images/background.png");
+  background-image: url("/static/app_images/background.png");
   padding: 5px; display: flex; flex-direction: column; justify-content: space-between;
   transition: left 0.3s ease-in-out; z-index: 1002;
   box-shadow: 2px 2px 10px rgba(0,0,0,0.7);
@@ -165,7 +166,7 @@ svg { filter: drop-shadow(2px 2px 2px rgba(0, 0, 0, 0.7)); }
   padding: 8px 8px;
   border-radius: 12px;
   color: #fff; font-weight: 600; font-size: 24px;
-  background-image: url("/media/stones/images/app_images/background.png");
+  background-image: url("/static/app_images/background.png");
   box-shadow: 2px 2px 5px rgba(60,35,25,1);
   text-shadow: 2px 2px 2px rgba(60,35,25,1);
   text-decoration: none; transition: transform 0.3s ease;
