--- a/templates/stone_detail.html
+++ b/templates/stone_detail.html
@@ -144,7 +144,7 @@
     .comment-body { flex: 1; }
     .comment-author { font-weight: bold; margin-bottom: 0.25rem; font-size: 0.95rem; }
     .comment-time { color: gray; font-weight: normal; font-size: 0.8rem; margin-left: 0.5rem; }
-    .no-comments { display: flex; flex-direction: column; align-items: center; justify-content: center; color: #555; text-align: center; }
+    .no-comments { display: flex; flex-direction: column; align-items: center; justify-content: center; color: #555; text-align: center;}
 
     /* Finder comment section */
     .finder-comment-box .finder-comment {
@@ -320,7 +320,7 @@
                     {% endfor %}
                 {% else %}
                     <div class="no-comments">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 16 16">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 16 16" style="filter: drop-shadow(0 0 0 rgba(0, 0, 0, 0))">
                             <path fill="currentColor" d="m11.293 12l2.853 2.854a.5.5 0 0 0 .708-.708l-13-13a.5.5 0 1 0-.708.708l.739.738A2.5 2.5 0 0 0 1 4.5v5A2.5 2.5 0 0 0 3.5 12H4v1.942a.98.98 0 0 0 1.625.738L8.688 12zM15 9.5c0 .916-.492 1.716-1.227 2.152L4.121 2H12.5A2.5 2.5 0 0 1 15 4.5z"/>
                         </svg>
                         <p>Brak komentarzy</p>
