--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Kontakt</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="{% static 'styles.css' %}">
     <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
     <style>
