--- a/templates/stone_detail.html
+++ b/templates/stone_detail.html
@@ -5,7 +5,7 @@
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>{{ stone.title }}</title>
     <link rel="stylesheet" href="{% static 'styles.css' %}">
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
@@ -35,6 +35,7 @@
         border-radius: 16px;
         padding: 1.5rem;
         box-shadow: 0 6px 20px rgba(0,0,0,0.15);
+        background: rgba(255, 255, 255, 0.65); /* white with 70% opacity */
     }
 
     .stone-box h1,
@@ -98,9 +99,18 @@
         gap: 12px;
     }
 
-    .comment-form textarea,
-    .comment-form input {
+    .comment-form textarea{
         width: 100%;
+        padding: 10px;
+        border-radius: 8px;
+        border: 1px solid #ccc;
+        margin-bottom: 5px;
+        font-size: 1rem;
+        box-sizing: border-box;
+    }
+
+    .comment-form input {
+        width: 300px;
         padding: 10px;
         border-radius: 8px;
         border: 1px solid #ccc;
@@ -211,7 +221,7 @@
             margin-top: 8px;
         }
 
-        .comment-form input { max-width: 100%; }
+        .comment-form input { width: 100%; }
     }
     </style>
 </head>
