--- a/templates/stone_found.html
+++ b/templates/stone_found.html
@@ -5,7 +5,7 @@
     <title>Kamień odnaleziony!</title>
     <link rel="stylesheet" href="{% static 'styles.css' %}">
     <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta charset="UTF-8">
     <style>
         :root {
