added image cropping

--- a/templates/partials/stone_card.html
+++ b/templates/partials/stone_card.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load cropping %}
 <style>
 /* STONE CARD */
 .stone-card {
@@ -81,7 +82,7 @@
 <div class="stone-card">
   <div class="stone-image-wrapper">
     <a href="{% url 'stone_detail' stone.pk %}">
-      <img src="{% if stone.image %}{{ stone.image.url }}{% else %}{% static 'app_images/no_image.jpeg' %}{% endif %}" alt="{{ stone.title }}">
+      <img src="{% if stone.image %}{% cropped_thumbnail stone 'cropping' %}{% else %}{% static 'app_images/no_image.jpeg' %}{% endif %}" alt="{{ stone.title }}">
     </a>
   </div>
   <div class="stone-content">
